[package]
name = "pnum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
console = "0.16.1"
ignore = "0.4.24"
indicatif = "0.18.2"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
walkdir = "2.5.0"
